--- a/Login.html
+++ b/Login.html
@@ -45,8 +45,9 @@
     </main>
 
     <footer>
-        <small>&copy; 2025 Your Site Name</small>
+        <small>&copy; 2025 Cora's Web</small>
     </footer>
 </body>
+
 
 </html>
